azuredeploy2.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "domainName": {
            "type": "string",
            "metadata": {
                "description": "Exchange domain - Make sure it is a domain you own"
            },
            "defaultValue": "domain.com"
        },
        "exchangeStorageSizeInGB": {
            "type": "int",
            "metadata": {
                "description": "Exchange Mailbox storage size in GB."
            },
	    "defaultValue": 50
        }
    },	  
    "variables": {
        "imagePublisher": "MicrosoftWindowsServer",
        "imageOffer": "WindowsServer",
        "addressPrefix": "10.0.0.0/16",
        "storageAccountType": "Standard_LRS",
        "publicIPAddressName": "[tolower(concat('ip', resourceGroup().name))]",
        "publicIPAddressType": "Dynamic",
        "subnetPrefix": "10.0.0.0/24",
        "subnetName": "[tolower(concat('sn', resourceGroup().name))]",
        "uniqueDnsNameForPublicIP": "[tolower(concat('dns', resourceGroup().name))]",
        "uniqueStorageAccountName": "[tolower(concat('sa', resourceGroup().name))]",
        "uniqueStorageAccountContainerName": "[tolower(concat('sc', resourceGroup().name))]",
        "location": "[resourceGroup().location]",
        "vmOsSku": "2012-R2-Datacenter",
        "vmAdminUsername": "sdfadm",
        "vmAdminPassword": "k5ws2REYRRU%ae1u",
        "vmName": "[concat('vm', resourceGroup().name)]",
        "vmOsDiskName": "[concat('od', resourceGroup().name)]",
        "vmDataDiskName": "[concat('dd', resourceGroup().name)]",
        "vmSize": "Standard_DS3_v2",
        "vmDataDiskSize": "25",
        "vmNicName": "[tolower(concat('nc', resourceGroup().name))]",
        "virtualNetworkName": "[tolower(concat('vn', resourceGroup().name))]",
        "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
        "subnetRef": "[concat(variables('vnetID'),'/subnets/',variables('subnetName'))]",
        "modulesPath": "https://raw.githubusercontent.com/nimsim/Templates/master/Exchange/",
        "modulesExchange": "ExchangeWorkload.zip",
        "modulesUrlExchange": "[concat(variables('modulesPath'),variables('modulesExchange'))]",
        "modulesExchangeData": "ExchangeWorkload.psd1",
        "modulesUrlExchangeData": "[concat(variables('modulesPath'),variables('modulesExchangeData'))]",
        "configurationFunctionExchange": "ExchangeWorkload.ps1\\InstallAndConfigureExchange",
        "nsgName": "[tolower(concat('ng', resourceGroup().name))]",
        "nsgID": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsgName'))]",
	"loadbalancerName": "[tolower(concat('lb', resourceGroup().name))]",
	"rdpPort": "65221",
        "exchangeInstallerPath": "InstallerExchange",
        "exchangeISOUri": "https://download.microsoft.com/download/6/6/F/66F70200-E2E8-4E73-88F9-A1F6E3E04650/ExchangeServer2016-x64-cu11.iso",
        "modulesExchangeISODownload": "CSDownloadISO.ps1",
        "modulesUrlExchangeISODownload": "[concat(variables('modulesPath'),variables('modulesExchangeISODownload'))]",
	"modulesAADConnectCertificateDownload": "aadccert.ps1",
	"modulesAADConnectCertUrlDownload": "[concat(variables('modulesPath'),variables('modulesAADConnectCertificateDownload'))]"
    },
    "resources": [
        {
            "apiVersion": "2019-06-01",
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[tolower(variables('uniqueStorageAccountName'))]",
            "location": "[variables('location')]",
            "properties": {
                "accountType": "[variables('storageAccountType')]"
            }
      },
        {
            "apiVersion": "2020-07-01",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[concat(variables('publicIPAddressName'))]",
            "location": "[variables('location')]",
            "properties": {
                "publicIPAllocationMethod": "[variables('publicIPAddressType')]",
                "dnsSettings": {
                    "domainNameLabel": "[variables('uniqueDnsNameForPublicIP')]"
                }
            }
        },
        {
            "apiVersion": "2020-07-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('nsgName')]",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ExchPorts",
                        "properties": {
			                "description": "Allowed ports by Microsoft",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRanges": [
				    "443",
				    "80",
				    "587",
				    "465",
				    "25"
			    ],
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "RDPBackend",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound"                        
               		}
		    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "location": "[variables('location')]",
            "dependsOn": [ "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]" ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[variables('nsgID')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('vmNicName')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/',variables('publicIPAddressName'))]",
                "[concat('Microsoft.Network/virtualNetworks/',variables('virtualNetworkName'))]",
		"[concat('Microsoft.Network/loadBalancers/',variables('loadbalancerName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfigpublic",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[variables('subnetRef')]"
              		},
              		"loadBalancerBackendAddressPools": [
                	{
                  	"id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadbalancerName')),'/backendAddressPools/LBBAP')]"
                	}
              	       ],
              		"loadBalancerInboundNatRules": [
                	{
                  	"id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadbalancerName')),'/inboundNatRules/rdp')]"
                	},
			{
                  	"id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadbalancerName')),'/inboundNatRules/http')]"
                	},
			{
                  	"id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadbalancerName')),'/inboundNatRules/https')]"
                	},
			{
                  	"id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadbalancerName')),'/inboundNatRules/mailsubmit')]"
                	},
			{
                  	"id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadbalancerName')),'/inboundNatRules/smtp')]"
                	},
			{
                  	"id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadbalancerName')),'/inboundNatRules/smtpsecure')]"
                	}
              	      ]
                    }
		  }  
                ]
              }
            },
	{
      "apiVersion": "2018-08-01",
      "type": "Microsoft.Network/loadBalancers",
      "name": "[variables('loadbalancerName')]",
      "location": "[variables('location')]",
      "dependsOn": [ 
        "[concat('Microsoft.Network/publicIPAddresses/',variables('publicIPAddressName'))]" 
        ],
      "properties": {
        "frontendIPConfigurations": [
          {
            "name": "LBFE",
            "properties": {
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',concat(variables('publicIPAddressName')))]"
              }
            }
          }
        ],
        "backendAddressPools": [
          {
            "name": "LBBAP"
          }
        ],
        "inboundNatRules": [
          {
            "name": "rdp",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadBalancerName')),'/frontendIPConfigurations/LBFE')]"
              },
              "protocol": "Tcp",
              "frontendPort": "[variables('rdpPort')]",
              "backendPort": 3389,
              "enableFloatingIP": false
            }
		},
		{
			"name": "https",
			"properties": {
              "frontendIPConfiguration": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadBalancerName')),'/frontendIPConfigurations/LBFE')]"
              },
              "protocol": "Tcp",
              "frontendPort": 443,
              "backendPort": 443,
              "enableFloatingIP": false
			}
		},
		{
			"name": "http",
			"properties": {
              "frontendIPConfiguration": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadBalancerName')),'/frontendIPConfigurations/LBFE')]"
              },
              "protocol": "Tcp",
              "frontendPort": 80,
              "backendPort": 80,
              "enableFloatingIP": false
			}
		},
		{
			"name": "smtp",
			"properties": {
              "frontendIPConfiguration": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadBalancerName')),'/frontendIPConfigurations/LBFE')]"
              },
              "protocol": "Tcp",
              "frontendPort": 25,
              "backendPort": 25,
              "enableFloatingIP": false
			}
		},
		{
			"name": "mailsubmit",
			"properties": {
              "frontendIPConfiguration": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadBalancerName')),'/frontendIPConfigurations/LBFE')]"
              },
              "protocol": "Tcp",
              "frontendPort": 587,
              "backendPort": 587,
              "enableFloatingIP": false
			}
		},
		{
			"name": "smtpsecure",
			"properties": {
              "frontendIPConfiguration": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers',variables('loadBalancerName')),'/frontendIPConfigurations/LBFE')]"
              },
              "protocol": "Tcp",
              "frontendPort": 465,
              "backendPort": 465,
              "enableFloatingIP": false
          }
	}
        ]
      }
     },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('vmName')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Storage/storageAccounts/',variables('uniqueStorageAccountName'))]",
                "[concat('Microsoft.Network/networkInterfaces/',variables('vmNicName'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('vmSize')]"
                },
                "osProfile": {
                    "computerName": "[variables('vmName')]",
                    "adminUsername": "[variables('vmAdminUsername')]",
                    "adminPassword": "[variables('vmAdminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('imagePublisher')]",
                        "offer": "[variables('imageOffer')]",
                        "sku": "[variables('vmOsSku')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "osdisk",
                        "vhd": {
                            "uri": "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('uniqueStorageAccountName')),providers('Microsoft.Storage', 'storageAccounts').apiVersions[0]).primaryEndpoints.blob,variables('uniqueStorageAccountContainerName'),'/',variables('vmOsDiskName'),'.vhd')]"
                        },
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    },
                    "dataDisks": [
                        {
                            "vhd": {
                                "uri": "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('uniqueStorageAccountName')),providers('Microsoft.Storage', 'storageAccounts').apiVersions[0]).primaryEndpoints.blob,variables('uniqueStorageAccountContainerName'),'/',variables('vmDataDiskName'),'-0','.vhd')]"
                            },
                            "name": "[concat(variables('vmDataDiskName'),'-0')]",
                            "createOption": "Empty",
                            "caching": "None",
                            "diskSizeGB": "[variables('vmDataDiskSize')]",
                            "lun": 0
                        },
                        {
                            "vhd": {
                                "uri": "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('uniqueStorageAccountName')),providers('Microsoft.Storage', 'storageAccounts').apiVersions[0]).primaryEndpoints.blob,variables('uniqueStorageAccountContainerName'),'/',variables('vmDataDiskName'),'-1','.vhd')]"
                            },
                            "name": "[concat(variables('vmDataDiskName'),'-1')]",
                            "createOption": "Empty",
                            "caching": "None",
                            "diskSizeGB": "[variables('vmDataDiskSize')]",
                            "lun": 1
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('vmNicName')))]"
                        }
                    ]
                }
            }
        },
		{
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(variables('vmName'),'/CustomScriptExtension')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',variables('vmName'))]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.4",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[variables('modulesUrlExchangeISODownload')]",
			"[variables('modulesAADConnectCertUrlDownload')]"
                    ],
                    "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -file ',variables('modulesExchangeISODownload'),' -uri ',variables('exchangeISOUri'),' -domainname ',parameters('domainName'),' -destination ',variables('exchangeInstallerPath'))]"
                }
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(variables('vmName'),'/dscExtension')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',variables('vmName'))]",
				"[concat('Microsoft.Compute/virtualMachines/',variables('vmName'),'/extensions/','CustomScriptExtension')]"
            ],
            "properties": {
                "publisher": "Microsoft.Powershell",
                "type": "DSC",
                "typeHandlerVersion": "2.15",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "modulesUrl": "[variables('modulesUrlExchange')]",
                    "configurationFunction": "[variables('configurationFunctionExchange')]",
                    "properties": {
                        "DomainName": "[parameters('domainName')]",
                        "StorageSize": "[parameters('exchangeStorageSizeInGB')]",
                        "VMAdminCreds": {
                            "userName": "[variables('vmAdminUsername')]",
                            "password": "PrivateSettingsRef:vmAdminPassword"
                        },
                        "Location": "[variables('location')]"
                    }
                },
                "protectedSettings": {
                    "items": {
                        "vmAdminPassword": "[variables('vmAdminPassword')]"
                    },
                    "DataBlobUri": "[variables('modulesUrlExchangeData')]"
                }
            }
        }
    ]
}
